--- a/package.json
+++ b/package.json
@@ -1,31 +1,35 @@
 {
-  "name": "website-detection-kssg",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@tanstack/react-query": "^4.29.7",
-    "@types/node": "20.1.4",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
-    "next": "13.4.2",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
-  },
-  "devDependencies": {
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-react-hooks": "^4.6.0"
-  }
+	"name": "website-detection-kssg",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@tanstack/react-query": "^4.29.7",
+		"@types/node": "20.1.4",
+		"@types/react": "18.2.6",
+		"@types/react-dom": "18.2.4",
+		"autoprefixer": "10.4.14",
+		"axios": "0.27.2",
+		"eslint": "8.40.0",
+		"eslint-config-next": "13.4.2",
+		"next": "13.4.2",
+		"postcss": "8.4.23",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"tailwindcss": "3.3.2",
+		"typescript": "5.0.4"
+	},
+	"devDependencies": {
+		"eslint-import-resolver-typescript": "^3.5.5",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint": "^8.29.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jest": "^27.1.6"
+	}
 }
