--- a/package.json
+++ b/package.json
@@ -17,19 +17,22 @@
 		"axios": "0.27.2",
 		"eslint": "8.40.0",
 		"eslint-config-next": "13.4.2",
+		"lodash": "^4.17.21",
 		"next": "13.4.2",
 		"postcss": "8.4.23",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hot-toast": "^2.4.1",
 		"tailwindcss": "3.3.2",
 		"typescript": "5.0.4"
 	},
 	"devDependencies": {
-		"eslint-import-resolver-typescript": "^3.5.5",
-		"eslint-plugin-react-hooks": "^4.6.0",
+		"@types/lodash": "^4.14.194",
 		"eslint": "^8.29.0",
 		"eslint-config-prettier": "^8.5.0",
+		"eslint-import-resolver-typescript": "^3.5.5",
 		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jest": "^27.1.6"
+		"eslint-plugin-jest": "^27.1.6",
+		"eslint-plugin-react-hooks": "^4.6.0"
 	}
 }
