--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
 		"next": "13.4.2",
 		"postcss": "8.4.23",
 		"react": "18.2.0",
+		"react-awesome-lightbox": "^1.8.1",
 		"react-dom": "18.2.0",
 		"react-hot-toast": "^2.4.1",
+		"react-image-lightbox": "^5.1.4",
 		"react-localization": "^1.0.19",
 		"tailwindcss": "3.3.2",
 		"typescript": "5.0.4",
